# libvmod-storage-name

./: .gitignore  Makefile.am  README.rst  configure.ac  vmod-storage_name.spec
debian/: changelog  control  dirs
src/: Makefile.am  storage.h  vmod_storage_name.c  vmod_storage_name.vcc
src/tests/: test01.vtc
